--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -169,8 +169,8 @@
           "being stannable",
           "being the big gay",
           "being a hottie",
-          "being a slut for /headpat",
-          "using /vibecheck",
+          "being a slut for /pat",
+          "using /vibe",
           "getting shoved in a locker",
           "being illegally cute",
           "being too cute for #burd-selfies",
@@ -182,7 +182,6 @@
           "being comf",
           "vibing",
           "being Doctor Lala's assistant",
-          "being a Bakushima shipper",
           "stanning Dakota",
           "stanning Angie",
           "stanning Inky",
