--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -169,7 +169,7 @@
           "being stannable",
           "being the big gay",
           "being a hottie",
-          "being a slut for /pat",
+          "being a slut for heapdats",
           "using /vibe",
           "getting shoved in a locker",
           "being illegally cute",
