--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.24",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.has": "^4.5.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.set": "^4.3.6",
     "@types/node-cron": "^2.0.4",
     "@types/object.fromentries": "^2.0.1",
@@ -35,6 +36,7 @@
     "dotenv": "^10.0.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
+    "lodash.isequal": "^4.5.0",
     "lodash.set": "^4.3.2",
     "mathjs": "^9.4.4",
     "node-cron": "^3.0.0",
