replace pkg with plug in cfg and schema

--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -64,7 +64,7 @@
     "no thots head empty",
     "mining duckcoin"
   ],
-  "pkg": {
+  "plug": {
     "duck": {
       "joins": {
         "duckRole": {
