use config guild names instead of direct getters for PluginKind.init

--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -1,9 +1,9 @@
 {
   "guilds": {
-    "pokecom": "157983957902819328",
-    "pokecomstaf": "193103073210662914",
-    "duck": "322199235825238017",
-    "dev": "746219046374080532"
+    "pokecom": { "id": "157983957902819328" },
+    "pokecomstaf": { "id": "193103073210662914" },
+    "duck": { "id": "322199235825238017" },
+    "dev": { "id": "746219046374080532" }
   },
   "assets": {
     "uploadDump": {
