add an off switch for all of cooltrainer

--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -222,6 +222,7 @@
       }
     },
     "ct": {
+      "enabled": false,
       "role": {
         "dev": "775261617805459486",
         "prod": "531984098038775842"
