--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "@prisma/client": "^2.28.0",
     "colors": "^1.4.0",
+    "cron-parser": "^3.5.0",
+    "cron-time-generator": "^1.2.0",
     "date-fns": "^2.23.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
