--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate": "prisma db push --preview-feature",
     "madge": "madge -c -b ./dist dist",
     "create:command": "node ./scripts/create_command.js",
+    "create:event": "node ./scripts/create_event.js",
     "create:plugin": "node ./scripts/create_plugin.js",
     "run:import": "node -r dotenv/config ./scripts/import.js"
   },
