--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -222,7 +222,7 @@
       }
     },
     "ct": {
-      "enabled": false,
+      "enabled": true,
       "role": {
         "dev": "775261617805459486",
         "prod": "531984098038775842"
