more vibe phrases, added /eval testVibePhrases

--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -138,6 +138,7 @@
         "negativeTraits": [
           "straight",
           "ugly",
+          "problematic",
           "a cursed user",
           "from texas",
           "from england",
@@ -146,24 +147,36 @@
           "too gay to function",
           "addicted to pleads",
           "a nerd",
+          "a slut",
           "a clown",
           "a weeb",
           "a boomer",
           "a homestuck",
+          "a gremlin",
+          "a gamer",
+          "a memer",
           "an owen",
+          "an edgelord",
+          "a wallflower",
           "a backstabber",
           "a hikikomori",
           "an SAO stan",
           "a Mineta stan",
           "a PC boomer",
           "uncomf",
+          "feral",
+          "lewd",
+          "insecure af",
           "a member of gumbo gang",
           "high on potenuse",
           "mewthree w/ armor",
           "quite conservative",
           "quite problematic",
+          "mean to porygon",
           "long overdue for cancellation",
           "on their ninth day without sleep",
+          "drowning in Crasher Wake's pool",
+          "someone who thinks Terraria is better than Minecraft >:(",
           "a player of the expanded free trial of our critically acclaimed MMORPG #FFXIV? you can play through the entirety of a realm reborn and the award-winning heavensward expansion up to level 60 for FREE with no restrictions on playtime"
         ],
         "positiveTraits": [
@@ -172,15 +185,21 @@
           "being the big gay",
           "being a hottie",
           "being a slut for heapdats",
+          "being friends with everyone",
+          "being sent to horny jail",
+          "not being british",
           "using /vibe",
           "getting shoved in a locker",
           "being illegally cute",
           "being too cute for #burd-selfies",
           "observing Inky Appreciation Hour",
           "joining the Warrior Cats Club",
+          "looking straight at Endermen",
           "being numerous bees",
           "vaping florida to create a hurricane",
           "being the world's biggest yorkshire pudding",
+          "having a severe caffeine addiction",
+          "feeding the ducks",
           "being comf",
           "vibing",
           "being Doctor Lala's assistant",
