removed bitcoin statuses, fuck bitcoin

--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -20,7 +20,6 @@
   "helpDesc": "You can see a pop-up list of commands by pressing `/`. If you have any other questions or suggestions, please direct them to my creator!",
   "activityMessages": [
     "cyberduck supreme",
-    "mining bitcoin",
     "just vibing",
     "drunk internet duck",
     "Duck Game",
@@ -60,8 +59,7 @@
     "hugging minecraft bee",
     "doing communism",
     "when i was a young duck",
-    "no thots head empty",
-    "mining duckcoin"
+    "no thots head empty"
   ],
   "plug": {
     "role": {
