--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "prisma": "^2.28.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "@prisma/client": "^2.28.0",
