--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cron-parser": "^3.5.0",
     "cron-time-generator": "^1.2.0",
     "date-fns": "^2.23.0",
+    "deepcopy": "^2.1.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "lodash.get": "^4.4.2",
