--- a/src/porygon/config_data.json
+++ b/src/porygon/config_data.json
@@ -249,11 +249,11 @@
       "shimLegacyCommands": true,
       "annivTeamRoles": {
         "scarlet": {
-          "prod": "TODO",
+          "prod": "951515884571230298",
           "dev": "950948943326502943"
         },
         "violet": {
-          "prod": "TODO",
+          "prod": "951515752224153641",
           "dev": "950948979795984434"
         }
       }
